--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@ By Sinan Esarp Magazaları'da yönetici iş veren</p>
   <section class="section companies">
     <h2>Şirketleri</h2>
     <div class="company-list">
-      <div class="company-card"><img src="resimler/logo1.jpg" alt="Şirket 1" /><h3>By Sinan Eşarp Mağazaları</h3><p> </p></div>
-      <div class="company-card"><img src="resimler/logo2.jpg" alt="Şirket 2" /><h3>AlwayScarf</h3><p>  </p></div>
-      <div class="company-card"><img src="resimler/logo3.jpg" alt="Şirket 3" /><h3>Turkuaz Eşarp A.Ş</h3><p>  </p></div>
-      <div class="company-card"><img src="resimler/logo4.jpg" alt="Şirket 4" /><h3>Dsier </h3><p>  </p></div>
-      <div class="company-card"><img src="resimler/logo5.jpg" alt="Şirket 5" /><h3>Dsier Auto</h3><p> </p></div>          
-      <div class="company-card"><img src="resimler/logo6.jpg" alt="Şirket 6" /><h3>Ubuntu</h3><p> </p></div>
-      <div class="company-card"><img src="resimler/logo7.jpg" alt="Şirket 7" /><h3>Dsier Gayrimenkul</h3><p>  </p></div>
-      <div class="company-card"><img src="resimler/logo8.jpg" alt="Şirket 8" /><h3>NeneHatun Eşarp</h3><p>  </p></div>
+      <div class="company-card"><img src="logo1.jpg" alt="Şirket 1" /><h3>By Sinan Eşarp Mağazaları</h3><p> </p></div>
+      <div class="company-card"><img src="logo2.jpg" alt="Şirket 2" /><h3>AlwayScarf</h3><p>  </p></div>
+      <div class="company-card"><img src="logo3.jpg" alt="Şirket 3" /><h3>Turkuaz Eşarp A.Ş</h3><p>  </p></div>
+      <div class="company-card"><img src="logo4.jpg" alt="Şirket 4" /><h3>Dsier </h3><p>  </p></div>
+      <div class="company-card"><img src="logo5.jpg" alt="Şirket 5" /><h3>Dsier Auto</h3><p> </p></div>          
+      <div class="company-card"><img src="logo6.jpg" alt="Şirket 6" /><h3>Ubuntu</h3><p> </p></div>
+      <div class="company-card"><img src="logo7.jpg" alt="Şirket 7" /><h3>Dsier Gayrimenkul</h3><p>  </p></div>
+      <div class="company-card"><img src="logo8.jpg" alt="Şirket 8" /><h3>NeneHatun Eşarp</h3><p>  </p></div>
     </div>
   </section>
 
@@ -211,3 +211,4 @@ By Sinan Esarp Magazaları'da yönetici iş veren</p>
 </footer>
 </body>
 </html>
+
